--- a/grade-submission/src/main/resources/templates/grades.html
+++ b/grade-submission/src/main/resources/templates/grades.html
@@ -115,8 +115,20 @@
           <th>Subject</th>
           <th>Score</th>
         </tr>
+        <tr th:object="${grade}">
+          <td th:text="*{name}"></td>
+          <td th:text="*{subject}"></td>
+          <td th:text="*{score}"></td>
+        </tr>
+        <!--
+        <tr>
+          <td th:text="${grade.name}"></td>
+          <td th:text="${grade.subject}"></td>
+          <td th:text="${grade.score}"></td>
+        </tr>
+        -->
       </table>
     </div>
-    
+
   </body>
 </html>
