--- a/workbook 2.1/src/main/resources/templates/shows.html
+++ b/workbook 2.1/src/main/resources/templates/shows.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Workbook 2.1</title>
@@ -13,9 +13,9 @@
             <th>Rating</th>
         </tr>
         <tr>
-            <td>Breaking Bad</td>
-            <td>Ozymandias</td>
-            <td>10.0</td>
+            <td th:text="${show.title}"></td>
+            <td th:text="${show.episode}"></td>
+            <td th:text="${show.rating}"></td>
         </tr>
         <tr>
             <td>Attack on Titan</td>
