--- a/conditionals/starter/conditionals/src/main/resources/templates/conditionals.html
+++ b/conditionals/starter/conditionals/src/main/resources/templates/conditionals.html
@@ -9,5 +9,10 @@
         <p th:unless="${sales > 50}">Sales were bad!</p>
     -->
     <p th:text="${sales > 50} ? 'Sales were good!' : 'Sales were bad'"></p>
+    <div th:switch="${product}">
+        <p th:case="'chair'">50</p>
+        <p th:case="'television'">120</p>
+        <p th:case="*">No match</p>
+    </div>
     </body>
 </html>
