--- a/workbook 2.6/src/main/resources/templates/dealership.html
+++ b/workbook 2.6/src/main/resources/templates/dealership.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <h3>Dealership</h3>
-        <div th:if="${budget > 5000}" th:switch="${make}">
+        <div th:if="${budget >= 5000}" th:switch="${make}">
             <p th:case="'Toyota'">Toyota Corolla: $5000</p>
             <p th:case="'Volkswagen'">Volkswagen Jetta: $6000</p>
             <p th:case="'Ford'">Ford Escape: $7000</p>
             <p th:case="'Honda'">Honda Civic: $8000</p>
             <p th:case="*">No cars match your query</p>
         </div>
-        <div th:unless="${budget > 5000}">
+        <div th:unless="${budget >= 5000}">
             <p>Sorry, we don't have any cars below $5000</p>
         </div>
     </body>
