--- a/grade-submission/src/main/resources/templates/grades.html
+++ b/grade-submission/src/main/resources/templates/grades.html
@@ -18,7 +18,7 @@
           <th>Subject</th>
           <th>Score</th>
         </tr>
-        <tr th:object="${grade}">
+        <tr th:each="grade : ${grades}" th:object="${grade}">
           <td th:text="*{name}"></td>
           <td th:text="*{subject}"></td>
           <td th:text="*{score}"></td>
