grade-submission updated

--- a/grade-submission/src/main/resources/templates/grades.html
+++ b/grade-submission/src/main/resources/templates/grades.html
@@ -22,6 +22,7 @@
           <td th:text="*{name}"></td>
           <td th:text="*{subject}"></td>
           <td th:text="*{score}"></td>
+          <td><a th:href="@{/name(__${grade.name}__)}" role="button" class="update">Update</a></td>
         </tr>
         <!--
         <tr>
