--- a/grade-submission/src/main/resources/templates/grades.html
+++ b/grade-submission/src/main/resources/templates/grades.html
@@ -22,15 +22,8 @@
           <td th:text="*{name}"></td>
           <td th:text="*{subject}"></td>
           <td th:text="*{score}"></td>
-          <td><a th:href="@{/name(__${grade.name}__)}" role="button" class="update">Update</a></td>
+          <td><a th:href="@{/(id = ${grade.id})}" role="button" class="update">Update</a></td>
         </tr>
-        <!--
-        <tr>
-          <td th:text="${grade.name}"></td>
-          <td th:text="${grade.subject}"></td>
-          <td th:text="${grade.score}"></td>
-        </tr>
-        -->
       </table>
     </div>
 
