--- a/global-superstore/src/main/resources/templates/inventory.html
+++ b/global-superstore/src/main/resources/templates/inventory.html
@@ -19,8 +19,8 @@
                  <th> </th>
               </tr>
               <tr>
-                 <td >Furniture</th>
-                 <td >Table</td>
+                 <td>Furniture</td>
+                 <td>Table</td>
                  <td type="currency" >2342.34</td>
                  <td type="currency">1657.23</td>
                  <td type="date">1996-02-02</td>
