--- a/global-superstore/src/main/resources/templates/inventory.html
+++ b/global-superstore/src/main/resources/templates/inventory.html
@@ -7,7 +7,11 @@
             <a  th:href="@{/}" >Form</a>
             <a class="active" th:href="@{/inventory}">Inventory</a>
         </div>
-   
+
+        <div th:if="${status == 'success'}" class="alert success">
+            <strong>You successfully submitted the item! </strong>
+        </div>
+
         <div class="container">
            <table>
               <tr class="head">
@@ -20,12 +24,12 @@
               </tr>
               <tr th:each="item : ${items}">
                  <td th:text="${item.category}"></td>
-                 <td th:text="${item.name}">Table</td>
+                 <td th:text="${item.name}"></td>
                  <td th:text="${#numbers.formatCurrency(item.price)}"></td>
                  <td th:text="${#numbers.formatCurrency(item.discount)}"></td>
                  <td th:text="${#dates.format(item.date, 'yyyy-MM-dd')}" type="date"></td>
                  <td>
-                    <a role="button" style="color:white; background-color: #263238" class="table-button" th:href="@{/}">Update</a>
+                    <a role="button" style="color:white; background-color: #263238" class="table-button" th:href="@{/(param=${item.id})}">Update</a>
                  </td>
               </tr>
            </table>
