--- a/global-superstore/src/main/resources/templates/inventory.html
+++ b/global-superstore/src/main/resources/templates/inventory.html
@@ -8,8 +8,12 @@
             <a class="active" th:href="@{/inventory}">Inventory</a>
         </div>
 
-        <div th:if="${status == 'success'}" class="alert success">
+        <div th:if="${status} == 'success'" class="alert success">
             <strong>You successfully submitted the item! </strong>
+        </div>
+
+        <div class="alert" th:if="${status} == 'failed'">
+            <strong > You failed to submit the item. </strong>
         </div>
 
         <div class="container">
@@ -29,7 +33,7 @@
                  <td th:text="${#numbers.formatCurrency(item.discount)}"></td>
                  <td th:text="${#dates.format(item.date, 'yyyy-MM-dd')}" type="date"></td>
                  <td>
-                    <a role="button" style="color:white; background-color: #263238" class="table-button" th:href="@{/(param=${item.id})}">Update</a>
+                    <a role="button" style="color:white; background-color: #263238" class="table-button" th:href="@{/(id=${item.id})}">Update</a>
                  </td>
               </tr>
            </table>
