--- a/javagram/src/main/resources/templates/sign.up.html
+++ b/javagram/src/main/resources/templates/sign.up.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" th:href="@{/form-stylesheet.css}">
 </head>
 <body>
-
+    <div class="container">
+        <h2>Javagram</h2>
+    </div>
 </body>
 </html>
