--- a/javagram/src/main/resources/templates/sign.up.html
+++ b/javagram/src/main/resources/templates/sign.up.html
@@ -9,14 +9,13 @@
     <div class="container">
         <h2>Javagram</h2>
 
-        <form method="post">
-            <input type="text" placeholder="First Name">
-            <input type="text" placeholder="Last Name">
-            <input type="text" placeholder="Username">
-            <input type="text" placeholder="Email">
+        <form method="post" th:object="${user}">
+            <input type="text" placeholder="First Name" th:field="*{firstname}">
+            <input type="text" placeholder="Last Name" th:field="*{lastname}">
+            <input type="text" placeholder="Username" th:field="*{username}">
+            <input type="text" placeholder="Email" th:field="*{email}">
             <p style="font-weight: bold">Date of birth</p>
-            <input type="date">
-            <br><br>
+            <input type="date" th:field="*{dateOfBirth}"><br><br>
             <input type="submit" value="Submit">
         </form>
     </div>
